--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   "devDependencies": {
     "cross-env": "^7.0.2",
     "laravel-mix": "^5.0.4",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "bulma": "^0.9.0",
     "connect-mongo": "^3.2.0",
     "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.5",
@@ -29,10 +35,13 @@
     "dotenv": "^8.2.0",
     "express-session": "^1.17.1",
     "helmet": "^3.23.3",
+    "lusca": "^1.6.1",
     "memorystore": "^1.6.2",
     "mongoose": "^5.9.25",
     "pug": "^3.0.0",
     "redis": "^3.0.2",
+    "vue": "^2.6.11",
+    "vuex": "^3.5.1",
     "winston": "^3.3.3"
   }
 }
