--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^7.0.2",
     "laravel-mix": "^5.0.4",
     "laravel-mix-alias": "^1.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.26.10",
