--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "laravel-mix-alias": "^1.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "raw-loader": "^4.0.1",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
