--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^5.9.25",
     "pug": "^3.0.0",
     "redis": "^3.0.2",
+    "validatorjs": "^3.18.1",
     "vue": "^2.6.11",
     "vuex": "^3.5.1",
     "winston": "^3.3.3"
