--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^7.0.2",
+    "debug": "^4.1.1",
     "laravel-mix": "^5.0.4",
     "laravel-mix-alias": "^1.0.2",
     "morgan": "^1.10.0",
