--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "laravel-mix-alias": "^1.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "raw-loader": "^4.0.1",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.26.10",
@@ -28,6 +29,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.0",
@@ -38,6 +40,7 @@
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express-session": "^1.17.1",
+    "font-awesome": "^4.7.0",
     "helmet": "^3.23.3",
     "lusca": "^1.6.1",
     "memorystore": "^1.6.2",
