Update router module

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 SERVER_HTTPS=false
 SERVER_PORT=8585
 SERVER_HOST=localhost
+
+#IF YOU USE A REVERSE-PROXY YOU CAN CHANGE SERVER_URL
 SERVER_URL=localhost:8585
 
 SESSION_TYPE=memory
