--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "dotenv": "^8.2.0",
     "express-session": "^1.17.1",
     "font-awesome": "^4.7.0",
+    "form-data": "^3.0.0",
     "helmet": "^3.23.3",
+    "lodash": "^4.17.20",
     "lusca": "^1.6.1",
     "memorystore": "^1.6.2",
     "mongoose": "^5.10.0",
