--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "cross-env": "^7.0.2",
     "debug": "^4.1.1",
-    "laravel-mix": "^5.0.4",
+    "laravel-mix": "^5.0.5",
     "laravel-mix-alias": "^1.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
@@ -25,7 +25,7 @@
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -38,15 +38,17 @@
     "cookie-session": "^1.4.0",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
+    "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "helmet": "^3.23.3",
     "lusca": "^1.6.1",
     "memorystore": "^1.6.2",
-    "mongoose": "^5.10.0",
+    "mongoose": "^5.10.3",
     "pug": "^3.0.0",
+    "rate-limit-redis": "^2.0.0",
     "redis": "^3.0.2",
-    "validatorjs": "^3.18.1",
-    "vue": "^2.6.11",
+    "validatorjs": "^3.19.2",
+    "vue": "^2.6.12",
     "vuex": "^3.5.1",
     "winston": "^3.3.3"
   }
