Update express-module   Add trusted proxy

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ SERVER_HOST=localhost
 #IF YOU USE A REVERSE-PROXY YOU CAN CHANGE SERVER_URL
 SERVER_URL=localhost:8585
 
+EXPRESS_TRUSTED_PROXY="loopback,linklocal,uniquelocal"
+
 SESSION_TYPE=memory
 
 HEADER_X_POWERED_BY='SUNSET-ENGINE'
