--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "buefy": "^0.9.3",
     "bulma": "^0.9.0",
     "bulma-rtl": "^0.8.0",
     "connect-mongo": "^3.2.0",
@@ -48,12 +49,15 @@
     "lodash": "^4.17.20",
     "lusca": "^1.6.1",
     "memorystore": "^1.6.2",
+    "moment": "^2.27.0",
+    "moment-jalaali": "^0.9.2",
     "mongoose": "^5.10.3",
     "pug": "^3.0.0",
     "rate-limit-redis": "^2.0.0",
     "redis": "^3.0.2",
     "validatorjs": "^3.19.2",
     "vue": "^2.6.12",
+    "vue-persian-datetime-picker": "^2.3.0",
     "vuex": "^3.5.1",
     "winston": "^3.3.3"
   }
