--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "csurf": "^1.11.0",
+    "dayjs": "^1.8.35",
     "dotenv": "^8.2.0",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "font-awesome": "^4.7.0",
     "form-data": "^3.0.0",
+    "gantt-elastic": "^1.0.11",
+    "gantt-elastic-header": "^0.1.11",
     "helmet": "^3.23.3",
     "lodash": "^4.17.20",
     "lusca": "^1.6.1",
